[package]
name = "undetected-chromedriver"
version = "0.1.2"
edition = "2021"
description = "An undetected implementation of thirtyfour."
repository = "https://github.com/Ulyssedev/Rust-undetected-chromedriver"
license = "MIT"
readme = "README.md"

[dependencies]
async-trait = "0.1.86"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.139"
thirtyfour = "0.35.0"
tokio = "1.43.0"
zip = "2.2.3"
tracing = "0.1.41"
